them xem tttk, qllsp

--- a/QuanLyBanQuanAo/DTO/DTO.csproj
+++ b/QuanLyBanQuanAo/DTO/DTO.csproj
@@ -51,12 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CHiTietSanPham.cs" />
+    <Compile Include="ChiTietSanPham.cs" />
     <Compile Include="DongHoaDon.cs" />
     <Compile Include="HoaDon.cs" />
     <Compile Include="KhuyenMai.cs" />
     <Compile Include="KichThuoc.cs" />
     <Compile Include="LoaiSanPham.cs" />
+    <Compile Include="LoaiSanPham_SoLuong.cs" />
     <Compile Include="Luong.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="Program.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="QLBanQuanAoContext.cs" />
     <Compile Include="SanPham.cs" />
     <Compile Include="TaiKhoan.cs" />
+    <Compile Include="TaiKhoan_NhanVien_Luong.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
