--- a/QuanLyBanQuanAo/BLL/BLL.csproj
+++ b/QuanLyBanQuanAo/BLL/BLL.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoaiSanPhamBLL.cs" />
+    <Compile Include="LuongBLL.cs" />
+    <Compile Include="NhanVienBLL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoanBLL.cs" />
@@ -53,6 +56,10 @@
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{199f069f-7c03-4c7f-9f7d-dbdbb0b71820}</Project>
       <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{07b69ecf-9c39-4b70-b759-7216875adec1}</Project>
+      <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
