--- a/QuanLyBanQuanAo/DAL/DAL.csproj
+++ b/QuanLyBanQuanAo/DAL/DAL.csproj
@@ -52,9 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoaiSanPhamDAL.cs" />
+    <Compile Include="LuongDAL.cs" />
+    <Compile Include="NhanVienDAL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaiKhoanDAO.cs" />
+    <Compile Include="TaiKhoanDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
