--- a/QuanLyBanQuanAo/BLL/BLL.csproj
+++ b/QuanLyBanQuanAo/BLL/BLL.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HoaDonBLL.cs" />
     <Compile Include="LoaiSanPhamBLL.cs" />
     <Compile Include="LuongBLL.cs" />
     <Compile Include="NhanVienBLL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SanPhamBLL.cs" />
     <Compile Include="TaiKhoanBLL.cs" />
   </ItemGroup>
   <ItemGroup>
