--- a/QuanLyBanQuanAo/DAL/DAL.csproj
+++ b/QuanLyBanQuanAo/DAL/DAL.csproj
@@ -52,11 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HoaDonDAL.cs" />
+    <Compile Include="KichThuocDAL.cs" />
     <Compile Include="LoaiSanPhamDAL.cs" />
     <Compile Include="LuongDAL.cs" />
     <Compile Include="NhanVienDAL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SanPhamDAL.cs" />
     <Compile Include="TaiKhoanDAL.cs" />
   </ItemGroup>
   <ItemGroup>
